--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 /vendor/
-*.env
-/storage/logs/
-/storage/tmp/
-/public/uploads/*
-/public/assets/*
+/.env
+/storage/uploads/
+/storage/tempUploads/
 *.log
-*.bak
+*.zip
+*.tar.gz
+*.pem
 .DS_Store
 Thumbs.db
+.idea/
+*.bak
+*.old
+*.swp
